core/compiler/tests/programs/ok/types.loz
:: R1 = { y :: Int }

m :: R1 -> Int
m {R1|y} = y

main = 18