core/compiler/tests/programs/type_err/undefined_record.loz
f {R|x} = x

main = {R|x = 18}